Правки по докладу

--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -16,7 +16,7 @@
 \textbf{Задачи:}
 \begin{itemize}
     \item обзор составных частей облачной инфраструктуры
-    \item анализ технологий используемых облачными провайдерами
+    \item анализ технологий используемых облачными поставщиками
     \item исследование специфики применений облачных вычислений в России
     \item исследование проблемы безопасности облачных вычислений
     \item исследование уязвимостей в облачной среде
@@ -34,7 +34,7 @@
 \begin{itemize}
     \item структура и характеристики облачной среды
     \item перечень угроз и уязвимостей
-    \item перечень характеристик качества
+    \item перечень характеристик качества системы ИБ
     \item облачная инфраструктура
 \end{itemize}
 
@@ -43,7 +43,7 @@
 \textbf{Выходные данные:}
 \begin{itemize}
     \item структура системы информационной безопасности
-    \item ПО для получения данных о уязвимостях
+    \item ПО для получения данных об уязвимостях
     \item список ПО используемого в инфраструктуре
     \item информация о проблемах безопасности в облачной среде
 \end{itemize}
@@ -69,10 +69,10 @@
 \textbf{Технологии:}
 \begin{itemize}
     \item виртуализация
-    \item оркестраторы
-    \item списки (каталоги) услуг
-    \item порталы самообслуживания
-    \item системы тарификации и выставления счетов (биллинг)
+    \item оркестратор
+    \item список (каталог) услуг
+    \item портал самообслуживания
+    \item система тарификации и выставления счетов (биллинг)
 \end{itemize}
 \end{frame}
 
@@ -83,6 +83,7 @@
 \begin{frame}
 \frametitle{\insertsection}
 
+\textbf{Проблемы:}
 \begin{itemize}
     \item не существует единого стандарта безопасности
     \item множество корпоративных стандартов
@@ -97,7 +98,7 @@
 
 %-------------------------------------------------------------------------------
 
-\section{Рекомендации руководства по безопасности}
+\section{Стратегически важные области безопасности}
 
 \begin{frame}
 \frametitle{\insertsection}
@@ -110,7 +111,7 @@
     \item соответствие техническим условиям и отчетность
     \item управление жизненным циклом информации
     \item портативность и совместимость
-    \item безопасность, восстановление
+    \item традиционная безопасность, восстановление
     \item работа центра обработки данных
     \item реакция на риски, уведомление и обучение
     \item прикладная безопасность
@@ -122,14 +123,14 @@
 
 %-------------------------------------------------------------------------------
 
-\section{Специфика российского рынка}
+\section{Специфика российского рынка облачных услуг}
 
 \begin{frame}
 \frametitle{\insertsection}
 \begin{itemize}
     \item наблюдается большой рост
     \item отсутствует явный монополист
-    \item разнообразный рынок
+    \item рынок облачных услуг разнообразен
     \item качество услуг растет
     \item влияние ФЗ №242-ФЗ <<О внесении изменений в отдельные законодательные акты Российской Федерации в части уточнения порядка обработки персональных данных в информационно-телекоммуникационных сетях>>
 \end{itemize}
@@ -137,7 +138,7 @@
 
 %-------------------------------------------------------------------------------
 
-\section{Крупнейшие поставщики услуг ЦОД 2016}
+\section{Крупнейшие поставщики услуг ЦОД в России}
 
 \begin{frame}
 \frametitle{\insertsection}
@@ -146,8 +147,8 @@
   \hline \# & Название компании & Количество доступных стойко-мест & Количество размещенных стойко-мест & Загруженность мощностей (\%) \\
   \hline 1 & Ростелеком & 3 900 & 3 432 & 88 \\
   \hline 2 & DataLine & 3 703 & 2 988 & 81 \\
-  \hline 3 & DataPro & 3 000 & н/д & н/д \\
-  \hline 4 & Linxtelecom & 2 040 & н/д & н/д \\
+  \hline 3 & DataPro & 3 000 & нет данных & нет данных \\
+  \hline 4 & Linxtelecom & 2 040 & нет данных & нет данных \\
   \hline 5 & Selectel & 1 500 & 1 200 & 80 \\
   \hline 6 & Stack Group & 1 400 & 854 & 61 \\
   \hline 7 & Ай-Теко & 1 200 & 960 & 80 \\
@@ -174,7 +175,8 @@
     \item перманентная потеря данных
     \item недостаточная осведомленность
     \item злоупотребление облачными сервисами
-    \item ...
+    \item DDoS-атаки
+    \item совместные технологии, общие риски
 \end{itemize}
 \end{frame}
 
@@ -272,11 +274,11 @@
 
 \begin{frame}
 \frametitle{\insertsection}
-\framesubtitle{Наиболее опасные критические уязвимости 2016 г.}
+\framesubtitle{Наиболее опасные критические уязвимости 2016~г.}
 
 \begin{table}[H]
   \begin{tabular}{|l|p{0.8cm}|p{4cm}|l|}
-  \hline CVE ID & CVSS & Тип уязвимости & ПО \\
+  \hline \textbf{CVE ID} & \textbf{CVSS} & \textbf{Тип уязвимости} & \textbf{ПО} \\
   \hline CVE-2016-5195 & 7.2 & Получение привилегий & Linux Kernel \\
   \hline CVE-2016-6258 & 7.2 & Получение привилегий & Xen \\
   \hline CVE-2016-5696 & 5.8 & Получение данных & Linux Kernel \\
@@ -289,21 +291,6 @@
   \end{tabular}
 \end{table}
 \end{frame}
-%-------------------------------------------------------------------------------
-
-\section{Методы обнаружения и блокирования уязвимостей}
-
-\begin{frame}
-\frametitle{\insertsection}
-
-\begin{itemize}
-    \item использование системы мониторинга
-    \item \textbf{управление привилегиями пользователей}
-    \item своевременное обновление ПО
-    \item управление конфигурациями
-    \item экранирование уязвимостей
-\end{itemize}
-\end{frame}
 
 %-------------------------------------------------------------------------------
 
@@ -311,7 +298,7 @@
 
 \begin{frame}
 \frametitle{\insertsection}
-\framesubtitle{https://github.com/Amet13/vulncontrol}
+\framesubtitle{Уведомление скрипта мониторинга в Telegram}
 
 \begin{figure}
     \center
@@ -349,11 +336,12 @@
     \item проанализированы существующие проблемы и стандарты безопасности облачных вычислений
     \item предложены способы решения данных проблем
     \item рассмотрена специфика предоставления облачных услуг зарубежных и отечественных поставщиков
-    \item проанализированы опасные уязвимости за 2016 г.
+    \item проанализированы опасные уязвимости за 2016~г.
     \item описаны входные и выходные данные, функций системы безопасности, произведена декомпозиция системы и описана связь между ее элементами
     \item произведен сравнительный анализ гипервизоров
     \item эксплуатирована уязвимость CVE-2016-5195
-    \item для мониторинга уязвимостей в программном обеспечении облачной среды был разработан скрипт
+    \item разработана система мониторинга уязвимостей
 \end{itemize}
 \end{frame}
+
 %-------------------------------------------------------------------------------
