--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -53,15 +53,15 @@
 \usepackage{tikz,calc,ifthen,color}
 
 \title{Исследование процессов обеспечения безопасности облачных сред}
-\subtitle{Выпускная квалификационная работа магистра}
+\subtitle{Выпускная квалификационная работа магистра на тему:}
 \author{Магистрант:\\
-Умеров А.Р. \\
+ст.гр.~ИВТ/м-31-з,~Умеров~А.Р. \\
 \vspace{0.7\baselineskip}
 Научный руководитель:\\
-к.т.н., доцент, Мащенко Е.Н.}
+к.т.н.,~доцент,~Мащенко~Е.Н.}
 \institute{Севастопольский государственный университет \\
 Кафедра информационных технологий и компьютерных систем}
-\date{2017 г.}
+\date{2017~г.}
 
 \begin{document}
 \input{slides.tex}
