Исправления в презентации и докладе

--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -18,7 +18,7 @@
     \item обзор составных частей облачной инфраструктуры
     \item анализ технологий используемых облачными поставщиками
     \item исследование специфики применений облачных вычислений в России
-    \item исследование проблемы безопасности облачных вычислений
+    \item исследование проблем безопасности облачных вычислений
     \item исследование уязвимостей в облачной среде
 \end{itemize}
 \end{frame}
@@ -44,7 +44,7 @@
 \begin{itemize}
     \item структура системы информационной безопасности
     \item ПО для получения данных об уязвимостях
-    \item список ПО используемого в инфраструктуре
+    \item анализ ПО используемого в облачных вычислениях
     \item информация о проблемах безопасности в облачной среде
 \end{itemize}
 \end{frame}
@@ -337,7 +337,7 @@
     \item предложены способы решения данных проблем
     \item рассмотрена специфика предоставления облачных услуг зарубежных и отечественных поставщиков
     \item проанализированы опасные уязвимости за 2016~г.
-    \item описаны входные и выходные данные, функций системы безопасности, произведена декомпозиция системы и описана связь между ее элементами
+    \item описаны входные и выходные данные, функции системы безопасности, произведена декомпозиция системы и описана связь между ее элементами
     \item произведен сравнительный анализ гипервизоров
     \item эксплуатирована уязвимость CVE-2016-5195
     \item разработана система мониторинга уязвимостей
