Сканы бланков, редактирование доклада

--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,7 @@
 \begin{document}
 
 % 1 страница
-% \includepdf{pz} % Пояснительная записка
+% \includepdf{extra/pz} % Пояснительная записка
 
 % 2 страница (не нумеруется, но учитывается)
 % \includepdf[pages={1,2}]{extra/task} % Задание на ВКР печатается на одном листе с двух сторон
